// Financeiro Pessoal — schema v1
// Importar em https://dbdiagram.io
// Reflete as decisoes da regra-de-negocio.md

Table conta {
  id uuid [pk]
  nome varchar [not null]
  origem varchar [not null, note: 'OPEN_FINANCE | MANUAL']
  tipo varchar [note: 'BANCO | CARTAO | INVESTIMENTO']
  pierre_account_id varchar [note: 'null se manual']
  saldo_manual decimal [note: 'null se Open Finance ou CARTAO (nesses casos saldo e calculado)']
  dia_fechamento int [note: 'so CARTAO; dia de fechamento da fatura']
  dia_vencimento int [note: 'so CARTAO; dia de vencimento da fatura']
  ativa boolean [not null, default: true]
}

Table categoria {
  id uuid [pk]
  nome varchar [not null]
  tipo varchar [not null, note: 'DESPESA | RECEITA']
  parent_id uuid [ref: > categoria.id, note: 'null se categoria raiz']
  arquivada boolean [not null, default: false]
}

Table de_para_categoria {
  id uuid [pk]
  categoria_pierre varchar [not null, note: 'string vinda da API do Pierre ou descricao importada']
  categoria_id uuid [ref: > categoria.id, note: 'minha categoria']
}

Table lancamento {
  id uuid [pk]
  pierre_txn_id varchar [note: 'null se manual; chave de dedup do sync']
  conta_id uuid [ref: > conta.id, not null]
  categoria_id uuid [ref: > categoria.id, note: 'null = sem categoria']
  descricao varchar
  valor decimal [not null]
  tipo varchar [not null, note: 'DEBIT | CREDIT — fonte da verdade do sinal']
  data date [not null]
  status varchar [not null, note: 'PENDENTE | SUGERIDO | PAGO']
  manual boolean [not null, default: false]
  oculto boolean [not null, default: false, note: 'soft-delete de lancamento OF']
  conta_fixa_id uuid [ref: > conta_fixa.id, note: 'null se avulso']
  conciliado_com uuid [ref: - lancamento.id, note: 'txn OF vinculada na conciliacao']
  transferencia_id uuid [ref: > transferencia.id, note: 'null se nao for perna de transferencia (item 3/12)']
  fatura_id uuid [ref: > fatura.id, note: 'null se nao for compra de cartao (item 12)']
  conta_receber_id uuid [ref: > conta_receber.id, note: 'null se nao for recebimento de conta a receber; 1:N — varios recebimentos podem apontar pro mesmo conta_receber ate zerar o saldo pendente (item 13)']
  compra_parcelada_id uuid [ref: > compra_parcelada.id, note: 'null se nao for parcela de compra parcelada; agrupa as N parcelas da mesma compra so para exibicao (item 12)']
  parcela_numero int [note: 'posicao desta parcela no grupo, ex: 3; null se nao for parcela (item 12)']
  assinatura_cartao_id uuid [ref: > assinatura_cartao.id, note: 'null se nao for compra gerada por assinatura de cartao; 1:N — varias compras podem apontar pra mesma assinatura ao longo dos meses (item 16)']
}

// Transferencia de mesma titularidade (item 3). Modelo de duas pernas:
// dois lancamentos (saida na origem, entrada no destino) compartilham o mesmo
// transferencia_id. Nao conta como gasto nem receita. Pagamento de fatura de
// cartao e uma transferencia conta corrente -> conta CARTAO (item 12).
// fatura_id: 1:N (nao 1:1) porque o pagamento de fatura pode ser PARCIAL
// (varias transferencias quitando a mesma fatura aos poucos) e ANTECIPADO
// (transferencia antes do ciclo fechar). Por isso a FK fica na transferencia
// e nao na fatura.
Table transferencia {
  id uuid [pk]
  data date [not null]
  valor decimal [not null]
  conta_origem_id uuid [ref: > conta.id, not null]
  conta_destino_id uuid [ref: > conta.id, note: 'NULL quando a transferencia e a saida de um EMPRESTIMO (item 13) — nao ha conta destino real, o destino e uma pessoa fora do sistema. Nos demais casos (transferencia normal, pagamento de fatura), permanece obrigatorio']
  fatura_id uuid [ref: > fatura.id, note: 'null se nao for pagamento de fatura de cartao (item 12)']
  conta_receber_id uuid [ref: > conta_receber.id, note: 'preenchido so quando a transferencia e a saida de um EMPRESTIMO (item 13); perna unica, sem conta_destino_id']
  descricao varchar
}

// Ciclo de fatura do cartao (item 12). Agrupa as compras (lancamento.fatura_id)
// e os pagamentos (transferencia.fatura_id, 1:N — pagamento parcial/antecipado
// gera varias transferencias para a mesma fatura). Saldo do cartao e
// calculado, nao armazenado: compras - pagamentos - estornos. Saldo pendente
// da fatura = soma das compras da fatura - soma das transferencias
// (pagamentos) vinculadas a ela.
Table fatura {
  id uuid [pk]
  conta_id uuid [ref: > conta.id, not null, note: 'conta do tipo CARTAO']
  data_fechamento date [not null]
  data_vencimento date [not null]
  status varchar [not null, note: 'ABERTA | FECHADA | PAGA — PAGA so quando o saldo pendente chega a zero']
}

Table conta_fixa {
  id uuid [pk]
  conta_id uuid [ref: > conta.id, not null]
  categoria_id uuid [ref: > categoria.id]
  descricao varchar [not null]
  valor decimal [not null]
  dia_vencimento int [not null, note: '1-31']
  periodicidade varchar [not null, default: 'MENSAL', note: 'MENSAL | ANUAL']
  mes_referencia int [note: '1-12; so relevante quando periodicidade=ANUAL, null quando MENSAL']
  ativa boolean [not null, default: true]
}

// Agrupador logico de compra parcelada no cartao (item 12). Cada parcela e
// seu proprio Lancamento (com fatura_id proprio, igual compra a vista) —
// compra_parcelada so guarda o metadado compartilhado da compra original
// para a UI agrupar/exibir "3/10". Mesmo padrao ja usado por `transferencia`
// (item 3): entidade compartilhada agrupando N lancamentos, sem estado de
// pagamento proprio (quitacao e so no nivel da fatura, nunca da parcela).
Table compra_parcelada {
  id uuid [pk]
  descricao varchar [not null, note: 'descricao da compra original, ex: Notebook Dell']
  valor_total decimal [not null, note: 'valor total da compra, antes de dividir pelas parcelas']
  quantidade_parcelas int [not null, note: 'total de parcelas, ex: 10']
  data_compra date [not null, note: 'data da compra original; NAO e a data de vencimento de cada parcela']
}

// Ativo (item 8). STANDALONE — sem FK para conta (decisao de 2026-07-12/15,
// substitui o modelo anterior por ticker+Brapi). valor_atual e 100% manual,
// sem nenhuma API externa; evolucao percentual e calculada sob demanda
// (item 8.1), nunca armazenada.
Table ativo {
  id uuid [pk]
  nome varchar [not null]
  tipo varchar [not null, note: 'RENDA_FIXA | RENDA_VARIAVEL']
  instituicao varchar [not null, note: 'texto livre; nao existe catalogo de instituicoes no sistema']
  valor_investido decimal [not null]
  valor_atual decimal [not null, note: 'nasce igual a valor_investido; so muda por atualizacao manual do usuario (item 8.1)']
  data_compra date [not null]
  ativa boolean [not null, default: true, note: 'soft-delete, mesmo padrao de conta.ativa/categoria.arquivada/lancamento.oculto (item 8.2)']
  criado_em timestamp [not null, default: `now()`]
  atualizado_em timestamp [note: 'null ate a primeira atualizacao manual de valor_atual']
}

// Contas a Receber (item 13). Mesma entidade pra RECEBIVEL e EMPRESTIMO,
// diferenciada por tipo. EMPRESTIMO usa transferencia.conta_receber_id pra
// registrar a saida (perna unica, sem conta_destino_id real — item 13).
// Recebimentos parciais reaproveitam lancamento (lancamento.conta_receber_id,
// 1:N), mesmo padrao ja usado por fatura_id/conta_fixa_id. valor_total e
// fixo desde o registro (sem juros/correcao). status e calculado a partir
// do saldo pendente (valor_total - soma dos lancamentos CREDIT vinculados
// com status PAGO), armazenado igual fatura.status.
Table conta_receber {
  id uuid [pk]
  tipo varchar [not null, note: 'RECEBIVEL | EMPRESTIMO']
  descricao varchar [not null]
  pessoa varchar [note: 'texto livre, sem cadastro proprio; obrigatorio se tipo=EMPRESTIMO, null se RECEBIVEL']
  valor_total decimal [not null, note: 'fixo desde o registro, sem juros/correcao']
  data_registro date [not null]
  data_prevista date [note: 'opcional; usada para saber em qual mes o saldo PENDENTE entra na projecao (item 9). PARCIAL entra em todo mes corrente ate zerar, independente desta data']
  categoria_id uuid [ref: > categoria.id, note: 'categoria de receita sugerida pros recebimentos; null = sem categoria; pode ser sobrescrita por recebimento individual']
  status varchar [not null, note: 'PENDENTE | PARCIAL | RECEBIDO']
  recebivel_recorrente_id uuid [ref: > recebivel_recorrente.id, note: 'null se conta_receber avulsa (item 13); preenchido quando a linha foi materializada por um molde recorrente (item 15). Indice unico parcial (recebivel_recorrente_id, data_prevista) WHERE recebivel_recorrente_id IS NOT NULL garante a idempotencia da materializacao']
}

// Recebivel Recorrente (item 15). MOLDE que materializa ocorrencias como
// registros conta_receber (tipo=RECEBIVEL, status=PENDENTE) vinculados por
// recebivel_recorrente_id. Espelha conta_fixa (item 6), mas: (a) so RECEBIVEL,
// nunca EMPRESTIMO; (b) sem conta/saldo/transferencia na materializacao -- a
// ocorrencia so vira dinheiro quando o usuario registra o recebimento (item 13);
// (c) as ocorrencias FUTURAS sao materializadas por um job agendado
// (BackgroundService) -- extensao consciente da restricao "sem job na v1" do
// item 6, valida SO aqui. Idempotencia: (recebivel_recorrente_id, data_prevista
// da ocorrencia) -- data exata, porque SEMANAL nao mapeia em mes/ano.
Table recebivel_recorrente {
  id uuid [pk]
  descricao varchar [not null]
  valor decimal [not null, note: 'valor de cada ocorrencia; copiado para conta_receber.valor_total na materializacao, fixo dali em diante (item 13)']
  periodicidade varchar [not null, default: 'MENSAL', note: 'MENSAL | ANUAL | SEMANAL -- enum proprio PeriodicidadeRecebivel, NAO reaproveita o de conta_fixa (que descartou SEMANAL, item 6)']
  dia_vencimento int [note: '1-31; obrigatorio se MENSAL ou ANUAL, null se SEMANAL; dia clampado ao ultimo dia do mes quando exceder (mesmo padrao de conta_fixa)']
  mes_referencia int [note: '1-12; obrigatorio se ANUAL, null caso contrario -- mes em que a ocorrencia anual cai (mesmo papel de conta_fixa.mes_referencia)']
  dia_da_semana varchar [note: 'SEG | TER | QUA | QUI | SEX | SAB | DOM -- enum proprio DiaDaSemana; obrigatorio se SEMANAL, null caso contrario. Ocorrencia corrente = dia alvo da semana atual (mesmo que ja passou); proximas = +7 dias']
  categoria_id uuid [ref: > categoria.id, note: 'categoria de receita herdada por cada ocorrencia; null = sem categoria']
  ativa boolean [not null, default: true, note: 'desativar hard-deleta as ocorrencias conta_receber ainda PENDENTE; reativar regenera (item 15)']
}

Table limite_gasto {
  id uuid [pk]
  categoria_id uuid [ref: > categoria.id, not null]
  valor_limite decimal [not null]
  periodo varchar [not null, default: 'MENSAL']
}

// Assinatura de Cartao (item 16). MOLDE de compra recorrente vinculado exclusivamente
// a conta do tipo CARTAO (ex: Netflix, Spotify). Materializa uma Compra (Lancamento com
// fatura_id, Tipo=DEBIT, Status=PAGO) a cada ciclo/mes. Diferente de conta_fixa (que gera
// lancamentos de fluxo de caixa em conta bancaria) e compra_parcelada (que divide
// valor_total em N vezes com fim fixado). Idempotencia: (assinatura_cartao_id, ano, mes).
// Desativacao cessa novas geracoes futuras, mantendo as compras ja geradas intocadas
// (fato historico consumado na fatura do cartao).
Table assinatura_cartao {
  id uuid [pk]
  conta_id uuid [ref: > conta.id, not null, note: 'restrito a conta com tipo=CARTAO']
  categoria_id uuid [ref: > categoria.id, note: 'null = sem categoria; categoria de despesa herdada pelas compras geradas']
  descricao varchar [not null, note: 'descricao da assinatura, ex: Netflix, Spotify']
  valor decimal [not null, note: 'valor fixo cobrado a cada ciclo/mes']
  dia_referencia int [not null, note: '1-31; dia de referencia no mes para data da compra; clampado ao ultimo dia se mes for mais curto']
  ativa boolean [not null, default: true, note: 'desativar cessa geracao de novas compras; compras passadas e atuais permanecem intocadas']
}

